[metadata]
name = ztffields
version = attr: ztffields.__version__
description = Access and Interact with ZTF Fields
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Mickael Rigault
author_email = m.rigault@ipnl.in2p3.fr
license = BSD 3-Clause "New" or "Revised" License
license_files = LICENSE
url = https://github.com/MickaelRigault/ztffields
keywords = astronomy, astrophysics
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.1
install_requires =
    importlib_resources; python_version < '3.10'  # not needed from 3.10
#    tomli >= 1.1.0; python_version < '3.11'       # not needed from py 3.11
    numpy
    matplotlib
    pandas
    shapely
    geopandas

[options.package_data]
ztffields = data/*

[options.extras_require]
docs = nbsphinx
tests = pytest; coverage

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1
